Fix: 참가자 목록 팝업 z-index 조정으로 인한 중첩 팝업의 z-index 조정

--- a/src/assets/style/service/service-invite-modal.scss
+++ b/src/assets/style/service/service-invite-modal.scss
@@ -149,7 +149,8 @@
 }
 
 @include responsive-mobile {
-  .service-mobile-inviteroom-modal {
+  .service-mobile-inviteroom-modal.fullscreen-modal {
+    z-index: 102;
     .fullscreen-modal--body {
       display: flex;
     }
